devops-kubernetes/frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  # По умолчанию сервис имеет тип ClusterIP - доступен только внутри кластера
  ports:
    - protocol: TCP
      # Порт, на котором сервис будет доступен внутри кластера
      port: 80
      # Порт, на который будет направляться трафик
      # в контейнере приложения.
      targetPort: 8080
  # Селектор для выбора подов, к которым будет направляться трафик
  selector:
    app: frontend
