devops-kubernetes/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    # Какой ClusterIssuer использовать для автоматической выдачи TLS-сертификата через cert-manager
    cert-manager.io/cluster-issuer: 'http01-clusterissuer'
spec:
  # Использовать контроллер Ingress nginx
  ingressClassName: 'nginx'
  # Настройка HTTPS
  tls:
    # Домены, для которых нужен сертификат
    - hosts:
        # Заменить на свой
        - 'mysuperduper.host'
      # Имя секрета, где будет храниться TLS-сертификат.
      # Заменить на свой
      secretName: mysuperduper.host-tls
  # Правила маршрутизации трафика
  rules:
    # Домен, по которому будет доступно приложение.
    # Заменить на свой
    - host: 'mysuperduper.host'
      http:
        # Список путей и сервисов
        paths:
          # Все запросы к корню сайта
          - path: /
            pathType: Prefix
            backend:
              service:
                # Трафик перенаправляется на сервис "frontend"
                name: frontend
                port:
                  number: 80
